--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,7 @@
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_image"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/profileimagetest" />
+                    android:layout_height="30dp" />
 
                 <TextView
                     android:id="@+id/username"
@@ -33,8 +32,7 @@
                     android:layout_marginLeft="25dp"
                     android:textColor="#fff"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:text="gdambrosio132"/>
+                    android:textStyle="bold" />
 
             </androidx.appcompat.widget.Toolbar>
 
