Added find a user option in menu. Retrieved users' information from firebase for display.

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,6 +7,9 @@
         android:id="@+id/logout"
         android:title="Logout"
         app:showAsAction="never"/>
-
+    <item
+        android:id="@+id/findfriends"
+        android:title="Find Friends"
+        app:showAsAction="never"/>
 
 </menu>
